# ForResSys_App

./: CMakeLists.txt  README.md
client/: app.cpp  app_config.ini  config_loader.cpp  config_loader.h  http_client.cpp  http_client.h  logger.cpp  logger.h
python_server/: config.py  main.py  moked_model.py  requirements.txt
python_server/ml/: SaveDev-predict .py  SaveDev-train.py  predict.py  train.py
python_server/models/: ConvLayers_model.py  LinearRegression_model.py
python_server/preproc/: Preprocess.py
